--- a/.github/workflows/troubleshooting.yml
+++ b/.github/workflows/troubleshooting.yml
@@ -10,6 +10,8 @@ jobs:
     - uses: actions/checkout@v1
     - name: Compile OpenMP test code and run it
       working-directory: ./
+      env:
+        OMP_NUM_THREADS: 16
       run: |
         sudo apt-get update; sudo apt-get install -y libomp5 libomp-dev
         echo OMP_NUM_THREADS:$OMP_NUM_THREADS
